# autoware_perception_ros2

msgs/autoware_perception_msgs/: .gitignore  package.xml
object_recognition/detection/lidar_apollo_instance_segmentation/: CMakeLists.txt  package.xml
object_recognition/detection/lidar_apollo_instance_segmentation/include/lidar_apollo_instance_segmentation/: cluster2d.hpp  debugger.hpp  detector.hpp  feature_generator.hpp  lidar_apollo_instance_segmentation_node.hpp  visibility_control.hpp
object_recognition/detection/lidar_apollo_instance_segmentation/include/pcl_ros/: transforms.h
object_recognition/detection/lidar_apollo_instance_segmentation/launch/: lidar_apollo_instance_segmentation.launch.py
object_recognition/detection/lidar_apollo_instance_segmentation/param/: model_128.yaml  model_64.yaml
object_recognition/detection/lidar_apollo_instance_segmentation/src/: cluster2d.cpp  debugger.cpp  detector.cpp  feature_map.cpp  lidar_apollo_instance_segmentation_node.cpp  lidar_apollo_instance_segmentation_node_exe.cpp  transforms.cpp
object_recognition/detection/tensorrt_yolo3/: CMakeLists.txt  package.xml
object_recognition/detection/tensorrt_yolo3/include/tensorrt_yolo3/: tensorrt_yolo3_node.hpp  visibility_control.hpp
object_recognition/detection/tensorrt_yolo3/launch/: tensorrt_yolo3.launch.py
object_recognition/detection/tensorrt_yolo3/lib/include/: data_reader.h
object_recognition/detection/tensorrt_yolo3/src/: tensorrt_yolo3_node.cpp
