<?xml version="1.0"?>
<package format="3">
    <name>tensorrt_yolo3</name>
    <version>0.1.0</version>
    <description>tensorrt_yolo3</description>

    <maintainer email="cirpue49@yahoo.co.jp">Kosuke Murakami</maintainer>
    <maintainer email="daisuke.nishimatsu@tier4.jp">Daisuke Nishimatsu</maintainer>
    <license>Apache 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>rclcpp_components</depend>
    <depend>rclcpp</depend>
    <depend>ament_index_cpp</depend>
    <depend>cv_bridge</depend>
    <depend>image_transport</depend>
    <depend>sensor_msgs</depend>
    <depend>autoware_perception_msgs</depend>

    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export><build_type>ament_cmake</build_type></export>
</package>
